Header should have a height when scrolling to prevent scrolling clipping with option pages that are the exact window height

--- a/src/assets/less/frame.less
+++ b/src/assets/less/frame.less
@@ -14,6 +14,9 @@
         h2 {
             margin-bottom: @grid-space;
         }
+        &.wpfc-header-scrolling {
+            min-height: 120px;
+        }
     }
     a, i {
         text-decoration: none;
@@ -62,7 +65,7 @@
 
 .wp-custom-fields-notifications {
     padding: @grid-space;
-    &.wpfc-header-scrolling {
+    .wpfc-header-scrolling & {
         background: #fff;
         border-bottom: 1px solid @wp-lightborder;
         position: fixed;
